src/grammar/.antlr/OPLangParser.py
# Generated from /home/tdung/assignment/PPL/oplang-compiler/src/grammar/OPLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OPLangParser ( Parser ):

    grammarFileName = "OPLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'func'", "'if'", "'else'", "'while'", 
                     "'return'", "'+'", "'-'", "'*'", "'/'", "'mod'", "'='", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'('", 
                     "')'", "'{'", "'}'", "';'", "','", "'int'", "'char'", 
                     "'bool'", "'void'" ]

    symbolicNames = [ "<INVALID>", "VAR", "FUNC", "IF", "ELSE", "WHILE", 
                      "RETURN", "PLUS", "MINUS", "MUL", "DIV", "MOD", "ASSIGN", 
                      "EQ", "NEQ", "LT", "GT", "LEQ", "GEQ", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "SEMICOLON", "COMMA", "INT", "CHAR", 
                      "BOOL", "VOID", "ID", "INTLIT", "STRINGLIT", "WS", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardecl = 2
    RULE_argdecl = 3
    RULE_funcdecl = 4
    RULE_stmt = 5
    RULE_condition = 6
    RULE_assignstmt = 7
    RULE_ifstmt = 8
    RULE_whilestmt = 9
    RULE_returnstmt = 10
    RULE_expr = 11
    RULE_atom = 12
    RULE_vartype = 13
    RULE_type = 14

    ruleNames =  [ "program", "decl", "vardecl", "argdecl", "funcdecl", 
                   "stmt", "condition", "assignstmt", "ifstmt", "whilestmt", 
                   "returnstmt", "expr", "atom", "vartype", "type" ]

    EOF = Token.EOF
    VAR=1
    FUNC=2
    IF=3
    ELSE=4
    WHILE=5
    RETURN=6
    PLUS=7
    MINUS=8
    MUL=9
    DIV=10
    MOD=11
    ASSIGN=12
    EQ=13
    NEQ=14
    LT=15
    GT=16
    LEQ=17
    GEQ=18
    LPAREN=19
    RPAREN=20
    LBRACE=21
    RBRACE=22
    SEMICOLON=23
    COMMA=24
    INT=25
    CHAR=26
    BOOL=27
    VOID=28
    ID=29
    INTLIT=30
    STRINGLIT=31
    WS=32
    ERROR_CHAR=33
    ILLEGAL_ESCAPE=34
    UNCLOSE_STRING=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OPLangParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.DeclContext)
            else:
                return self.getTypedRuleContext(OPLangParser.DeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(OPLangParser.StmtContext,i)


        def getRuleIndex(self):
            return OPLangParser.RULE_program




    def program(self):

        localctx = OPLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4264034408) != 0):
                self.state = 32
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 30
                    self.decl()
                    pass

                elif la_ == 2:
                    self.state = 31
                    self.stmt()
                    pass


                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self.match(OPLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(OPLangParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(OPLangParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_decl




    def decl(self):

        localctx = OPLangParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(OPLangParser.VartypeContext,0)


        def ID(self):
            return self.getToken(OPLangParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(OPLangParser.SEMICOLON, 0)

        def ASSIGN(self):
            return self.getToken(OPLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_vardecl




    def vardecl(self):

        localctx = OPLangParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.vartype()
            self.state = 44
            self.match(OPLangParser.ID)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 45
                self.match(OPLangParser.ASSIGN)
                self.state = 46
                self.expr(0)


            self.state = 49
            self.match(OPLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.VartypeContext)
            else:
                return self.getTypedRuleContext(OPLangParser.VartypeContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(OPLangParser.ID)
            else:
                return self.getToken(OPLangParser.ID, i)

        def COMMA(self):
            return self.getToken(OPLangParser.COMMA, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_argdecl




    def argdecl(self):

        localctx = OPLangParser.ArgdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_argdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.vartype()
            self.state = 52
            self.match(OPLangParser.ID)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 53
                self.match(OPLangParser.COMMA)
                self.state = 54
                self.vartype()
                self.state = 55
                self.match(OPLangParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(OPLangParser.TypeContext,0)


        def ID(self):
            return self.getToken(OPLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(OPLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(OPLangParser.RPAREN, 0)

        def argdecl(self):
            return self.getTypedRuleContext(OPLangParser.ArgdeclContext,0)


        def stmt(self):
            return self.getTypedRuleContext(OPLangParser.StmtContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_funcdecl




    def funcdecl(self):

        localctx = OPLangParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.type_()
            self.state = 60
            self.match(OPLangParser.ID)
            self.state = 61
            self.match(OPLangParser.LPAREN)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 234881024) != 0):
                self.state = 62
                self.argdecl()


            self.state = 65
            self.match(OPLangParser.RPAREN)
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 66
                self.stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(OPLangParser.VardeclContext,0)


        def assignstmt(self):
            return self.getTypedRuleContext(OPLangParser.AssignstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(OPLangParser.IfstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(OPLangParser.WhilestmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(OPLangParser.ReturnstmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(OPLangParser.SEMICOLON, 0)

        def LBRACE(self):
            return self.getToken(OPLangParser.LBRACE, 0)

        def stmt(self):
            return self.getTypedRuleContext(OPLangParser.StmtContext,0)


        def RBRACE(self):
            return self.getToken(OPLangParser.RBRACE, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_stmt




    def stmt(self):

        localctx = OPLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.assignstmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.ifstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.whilestmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 73
                self.returnstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.expr(0)
                self.state = 75
                self.match(OPLangParser.SEMICOLON)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 77
                self.match(OPLangParser.LBRACE)
                self.state = 78
                self.stmt()
                self.state = 79
                self.match(OPLangParser.RBRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(OPLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(OPLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_condition




    def condition(self):

        localctx = OPLangParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(OPLangParser.LPAREN)
            self.state = 84
            self.expr(0)
            self.state = 85
            self.match(OPLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(OPLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(OPLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(OPLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_assignstmt




    def assignstmt(self):

        localctx = OPLangParser.AssignstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(OPLangParser.ID)
            self.state = 88
            self.match(OPLangParser.ASSIGN)
            self.state = 89
            self.expr(0)
            self.state = 90
            self.match(OPLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(OPLangParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(OPLangParser.ConditionContext,0)


        def stmt(self):
            return self.getTypedRuleContext(OPLangParser.StmtContext,0)


        def SEMICOLON(self):
            return self.getToken(OPLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_ifstmt




    def ifstmt(self):

        localctx = OPLangParser.IfstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(OPLangParser.IF)
            self.state = 93
            self.condition()
            self.state = 94
            self.stmt()
            self.state = 95
            self.match(OPLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhilestmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(OPLangParser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(OPLangParser.ConditionContext,0)


        def stmt(self):
            return self.getTypedRuleContext(OPLangParser.StmtContext,0)


        def SEMICOLON(self):
            return self.getToken(OPLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_whilestmt




    def whilestmt(self):

        localctx = OPLangParser.WhilestmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whilestmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(OPLangParser.WHILE)
            self.state = 98
            self.condition()
            self.state = 99
            self.stmt()
            self.state = 100
            self.match(OPLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(OPLangParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(OPLangParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(OPLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_returnstmt




    def returnstmt(self):

        localctx = OPLangParser.ReturnstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(OPLangParser.RETURN)
            self.state = 103
            self.expr(0)
            self.state = 104
            self.match(OPLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(OPLangParser.AtomContext,0)


        def LPAREN(self):
            return self.getToken(OPLangParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OPLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(OPLangParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(OPLangParser.RPAREN, 0)

        def PLUS(self):
            return self.getToken(OPLangParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(OPLangParser.MINUS, 0)

        def MUL(self):
            return self.getToken(OPLangParser.MUL, 0)

        def DIV(self):
            return self.getToken(OPLangParser.DIV, 0)

        def MOD(self):
            return self.getToken(OPLangParser.MOD, 0)

        def EQ(self):
            return self.getToken(OPLangParser.EQ, 0)

        def NEQ(self):
            return self.getToken(OPLangParser.NEQ, 0)

        def LT(self):
            return self.getToken(OPLangParser.LT, 0)

        def LEQ(self):
            return self.getToken(OPLangParser.LEQ, 0)

        def GT(self):
            return self.getToken(OPLangParser.GT, 0)

        def GEQ(self):
            return self.getToken(OPLangParser.GEQ, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_expr



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = OPLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 107
                self.atom()
                pass

            elif la_ == 2:
                self.state = 108
                self.match(OPLangParser.LPAREN)
                self.state = 109
                self.expr(0)
                self.state = 110
                self.match(OPLangParser.RPAREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 120
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = OPLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 114
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 115
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3968) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 116
                        self.expr(4)
                        pass

                    elif la_ == 2:
                        localctx = OPLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 117
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 118
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 516096) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 119
                        self.expr(3)
                        pass

             
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(OPLangParser.INTLIT, 0)

        def STRINGLIT(self):
            return self.getToken(OPLangParser.STRINGLIT, 0)

        def ID(self):
            return self.getToken(OPLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(OPLangParser.LPAREN, 0)

        def atom(self):
            return self.getTypedRuleContext(OPLangParser.AtomContext,0)


        def RPAREN(self):
            return self.getToken(OPLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_atom




    def atom(self):

        localctx = OPLangParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_atom)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(OPLangParser.INTLIT)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(OPLangParser.STRINGLIT)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.match(OPLangParser.ID)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.match(OPLangParser.LPAREN)
                self.state = 129
                self.atom()
                self.state = 130
                self.match(OPLangParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(OPLangParser.INT, 0)

        def CHAR(self):
            return self.getToken(OPLangParser.CHAR, 0)

        def BOOL(self):
            return self.getToken(OPLangParser.BOOL, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_vartype




    def vartype(self):

        localctx = OPLangParser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_vartype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 234881024) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(OPLangParser.VartypeContext,0)


        def VOID(self):
            return self.getToken(OPLangParser.VOID, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_type




    def type_(self):

        localctx = OPLangParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_type)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 26, 27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.vartype()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(OPLangParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[11] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




